Search many books at once time

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,4 @@
 # Development settings
 USER_AGENT="<Find from Developer Tab>"
-URL="https://thailand.kinokuniya.com/bw/<ISBN>"
+URL="https://thailand.kinokuniya.com/bw/"
+BOOK_ISBN="<ISBN-1>,<ISBN-2>"
